# rust-language

./: Cargo.toml  README.md  result.txt
crates/the-rust-programming-language/: Cargo.toml
crates/the-rust-programming-language/src/: lib.rs  some.rs
crates/the-rust-programming-language/src/arbitrary/: mod.rs  trait_arbitrary.rs
crates/the-rust-programming-language/src/ches/: ch01_getting_started.rs  ch02_guessing_game_tutorial.rs  ch04_understanding_ownership.rs  ch08_common_collections.rs  ch09_error_handling.rs  ch11_testing.rs  ch12_an_io_project.rs  ch13_closures.rs  mod.rs
crates/the-rust-programming-language/src/serde/: serde.rs
crates/the-rust-programming-language/tests/: convertors.rs  integration_teset.rs
crates/the-rust-programming-language/tests/common/: mod.rs
src/: lib.rs  main.rs
src/tests/: integration_test.rs
tests/: integration_test.rs
