[package]
name = "the-rust-programming-language"
version.workspace = true
edition.workspace = true

[dependencies]
rand = "0.8.5"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arbitrary = { version = "1", features = ["derive"] }